# unified_csv_mock_generator_tool

./: .editorconfig  .gitignore  CONTRIBUTORS.txt  README.rst  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
compose/production/traefik/: traefik.yml
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt  local.txt
unified_csv_mock_generator_tool/: conftest.py
unified_csv_mock_generator_tool/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
unified_csv_mock_generator_tool/templates/: base.html
unified_csv_mock_generator_tool/users/: admin.py  apps.py  models.py  urls.py
unified_csv_mock_generator_tool/users/tests/: test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
