[tool.poetry]
name = "unified_csv_mock_generator_tool"
version = "0.1.0"
description = ""
authors = ["Kirill Totok <kirill.totok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytz = "2020.4"
python-slugify = "4.0.1"
Pillow = "8.0.1"
argon2-cffi = "20.1.0"
whitenoise = "5.2.0"
redis = "3.5.3"
hiredis = "1.1.0"
celery = "4.4.6"
django-celery-beat = "2.1.0"
flower = "0.9.5"
django = "3.0.11"
"3.1" = "^1.0.0"
django-environ = "0.4.5"
django-model-utils = "4.0.0"
django-allauth = "0.43.0"
django-crispy-forms = "1.10.0"
django-redis = "4.12.1"
Werkzeug = "1.0.1"
ipdb = "0.13.4"
mypy = "0.790"
django-stubs = "1.7.0"
pytest = "6.1.2"
pytest-sugar = "0.9.4"
sphinx = "3.3.1"
sphinx-autobuild = "2020.9.1"
flake8 = "3.8.4"
flake8-isort = "4.0.0"
coverage = "5.3"
black = "20.8b1"
pylint-django = "2.3.0"
pylint-celery = "0.3"
pre-commit = "2.8.2"
factory-boy = "3.1.0"
django-debug-toolbar = "3.1.1"
django-extensions = "3.0.9"
django-coverage-plugin = "1.8.0"
pytest-django = "4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
